--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,15 @@
     font-size: 150px;
     font-weight: 600;
 }
+
+@media  screen and (max-width: 767px) {
+    
+    h1{
+        font-size: medium;
+    }
+    
+    #numeros{
+        font-size: 70px;
+        font-weight: 500;
+    }    
+}
