--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     font-weight: 600;
 }
 
+#contenedorPrincipal{
+    width: 40%;
+}
+
 @media  screen and (max-width: 767px) {
     
     h1{
@@ -13,4 +17,8 @@
         font-size: 70px;
         font-weight: 500;
     }    
+
+    #contenedorPrincipal{
+        width: 80%;
+    }
 }
